test/compile-fail/resolution/type-existence/fn-unknown-struct/expected.txt
error: expected type, found mod `X`
 --> top.rhdl:3:8
  |
3 | fn a(x: X) {
  |         ^ not a type
error: unresolved item `Y`
 --> top.rhdl:4:11
  |
4 |     let y: Y = Y {};
  |            ^ no `Y` item
